<resources>
    <string name="app_name">Hypermile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_link"><![CDATA[<a>Sign up</a>]]></string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- App specific -->
    <string name="no_reports">No reports to show yet. Start the app before driving to create your first report!</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="latest_report">Latest report now available. You managed an average MPG of %.2f and used %.2f litres of fuel. Click the link below to see a more detailed report."</string>

    <string name="no_gps_data_info">You may have not given the app the correct location permissions. If permissions are for foreground only then ensure the app is open for the entire journey.</string>

    <string name="map_key_brief">The route has been colour coded to show fuel consumption during your journey</string>

    <string name="map_key_high_mpg">Efficient</string>
    <string name="map_key_mid_mpg">OK</string>
    <string name="map_key_low_mpg">Poor</string>
</resources>