<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reportActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/reportScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportActivityToolbar">

        <LinearLayout
            android:id="@+id/reportActivityContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                android:id="@+id/noMapInfo"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No GPS data was recorded"
                        android:textSize="18sp"
                        android:textAlignment="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_gps_data_info"
                        android:textSize="12sp"
                         />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                android:id="@+id/mapCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/mapLayout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/map_key_brief"/>

                        <LinearLayout
                            android:background="@color/off_white"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="10dp"
                                android:gravity="center|start"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/map_key_high_mpg" />

                                <ImageView
                                    android:id="@+id/highMpgKey"
                                    android:layout_margin="10dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/map_key_line" />

                                <TextView
                                    android:id="@+id/highMpgDetails"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />



                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginHorizontal="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/map_key_mid_mpg" />

                                <ImageView
                                    android:id="@+id/midMpgKey"
                                    android:layout_margin="10dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/map_key_line" />

                                <TextView
                                    android:id="@+id/midMpgDetails"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginHorizontal="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/map_key_low_mpg" />

                                <ImageView
                                    android:id="@+id/lowMpgKey"
                                    android:layout_margin="10dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/map_key_line" />

                                <TextView
                                    android:id="@+id/lowMpgDetails"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/statisticsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Statistics"
                        android:padding="15dp"/>
                    <TableLayout
                        android:id="@+id/statisticsTable"
                        style="@style/TableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:stretchColumns="1">

                    </TableLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>